# everdo-client-sync-python

./: .gitignore  AGENTS.md  README.md  everdo_cli.py  pyproject.toml
.agent/memory-bank/: architecture.md  progress.md  tech-stack.md
.agent/skills/everdo-cli/: cache.md  data-model.md  mutating.md  projects-notebooks.md  reading.md  recipes.md  skill.md  troubleshooting.md
.agents/: cache.md  mutating.md  recipes.md  skill.md
.agents/memory-bank/: architecture.md  progress.md  protocol.md  tech-stack.md
everdo/: __init__.py  client.py  config.py  paths.py  tasks.py
