[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "everdo-client-sync-python"
version = "0.1.2"
description = "Python client + CLI for a self-hosted Everdo server (sync protocol)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests", "typer>=0.12"]

[project.scripts]
everdo-cli = "everdo_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["everdo"]

[tool.hatch.build.targets.wheel.force-include]
"everdo_cli.py" = "everdo_cli.py"
